--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
             🔥 Projet troll
         </h1>
     </header>
+    <main>
+
+    </main>
+    <footer>
+        &copy;-MIT-2024
+    </footer>
 </body>
 </html>
