--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
         </h1>
     </header>
     <main>
-
+        <figure>
+            <img src="./asset/grand troll.png" alt="troll figurine">
+            <figcaption>
+                <h2>The Troll</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi porro animi, dignissimos enim dicta nulla 
+                    nihil suscipit deleniti vitae necessitatibus, delectus iure deserunt ex. Nobis optio beatae corporis laudantium.
+                </p>
+            </figcaption>
+        </figure>
     </main>
     <footer>
         &copy; - MIT - 2024
