--- a/index.html
+++ b/index.html
@@ -14,14 +14,44 @@
 <body>
     <header>
         <h1>
-            🔥 Projet troll
+            <span aria-hidden="true">🔥</span> Take back control
         </h1>
     </header>
     <main>
+        <!-- main pour les image -->
+        <figure>
+            <figcaption>
+              <h2>
+                <span aria-hidden="true">🚀</span>
+                Language 
+                <a href="https://www.pokepedia.fr/Conseil_4#Conseil_4_d'%C3%89ternara" target="blank">Elite Four</a></h2>
+            </figcaption>
+            <!-- banniere -->
+            <ul>
+                <li 
+                data-id="HTML"
+                >
+                <img loading="lazy" 
+                src="https://www.pokepedia.fr/images/2/2c/Damien-ROSA.png" 
+                alt="Damien">
+                </li>
+
+                <li data-id="CSS">
+                    <img loading="lazy" src="https://www.pokepedia.fr/images/f/fc/Spectra-ROSA.png"  alt="Spectra"></li>
+                <li data-id="Javascript">
+                    <img loading="lazy" src="https://www.pokepedia.fr/images/7/75/Glacia-ROSA.png" alt="Glacia"></li>
+                <li data-id="PHP">
+                    <img loading="lazy" src="https://www.pokepedia.fr/images/f/f9/Aragon-ROSA.png" alt="Aragon"></li>
+            </ul>
+          </figure>
+
         <figure>
             <img src="./asset/grand troll.png" alt="troll figurine">
             <figcaption>
-                <h2>The Troll</h2>
+                <h2>
+                    <span aria-hidden="true">🚀</span>
+                    No pain No gain
+                </h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae eligendi porro animi, dignissimos enim dicta nulla 
                     nihil suscipit deleniti vitae necessitatibus, delectus iure deserunt ex. Nobis optio beatae corporis laudantium.
